--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,11 +1,17 @@
  .container{
-  width: 100%;
+   max-width: 650px;
   
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 50px 15px;
+
+  margin: 0 auto;
+  margin-top: 50px;
+  padding:  20px;
+
+  border-radius: 7px;
+  background-color: rgb(219, 219, 218);
   }
 
  .title{
