--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,17 @@
 
 body {
   margin: 0;
+  padding: 0 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url(./images/image-1.jpg);
+  background-repeat: repeat;
+  background-position:center;
+  background-size: cover;
 }
 
 code {
@@ -24,9 +30,7 @@ body,
   width: 100%;
   height: 100%;
   margin: 0;
-  font-size: $defaultFontSize;
-  font-family: $defaultFont;
-  -webkit-font-smoothing: antialiased;
+   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -59,7 +63,8 @@ img {
 
 button {
   height: 40px;
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   padding: 0 10px;
   font-size: 17px;
   font-weight: 600;
